@@ -1,16 +1,7 @@
-#!/bin/bash
+#!/bin/sh
 
-cd ..
-patch -p0 <lighty/patch_ordm41_deviations.diff
-mvn clean install -DskipTests
-#git checkout -- ordmodels/network/src/main/yang/org-openroadm-network-topology@2018-11-30.yang ordmodels/network/src/main/yang/org-openroadm-network@2018-11-30.yang ordmodels/network/src/main/yang/org-openroadm-otn-network-topology@2018-11-30.yang
-git clone https://github.com/PantheonTechnologies/lighty-core.git
-cd lighty-core
-git checkout 10.0.x
-mvn clean install -DskipTests
-cd ../lighty
-mvn clean install
-cd  target
-unzip lighty-transportpce-10.0.1-SNAPSHOT-bin.zip
-cd ..
-# rm -rf ../lighty-core
+cd $(dirname "$0")
+export JDK_JAVA_OPTIONS="--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED"
+./build_lighty_core.sh
+mvn clean install -B -U -Dmaven.javadoc.skip=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+unzip -q target/tpce-bin.zip -d target
